@@ -1,2 +1,3 @@
 Sean Connery was the best Bond.
+To file and to stdout
 *-* All Finished *-*
