@@ -1,0 +1,1 @@
+To file and to stdout
